[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/Menu.gd" type="Script" id=1]
[ext_resource path="res://ui/themes/main_theme.tres" type="Theme" id=2]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 2.0
margin_right = 1.0
margin_bottom = 2.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [  ],
"_edit_lock_": true,
"_edit_vertical_guides_": [  ]
}
_server_url = "http://vote.muckas.com"
_api_path = "/api/"
_server_port = 80

[node name="ViewportTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true
autostart = true

[node name="HFlowContainer" type="HFlowContainer" parent="."]
margin_right = 300.0
margin_bottom = 232.0
custom_constants/hseparation = 300

[node name="BtHostVote" type="Button" parent="HFlowContainer"]
margin_right = 300.0
margin_bottom = 42.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Host Vote"

[node name="BtJoinVote" type="Button" parent="HFlowContainer"]
margin_top = 62.0
margin_right = 300.0
margin_bottom = 104.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Join Vote"

[node name="BtVoteEditor" type="Button" parent="HFlowContainer"]
margin_top = 124.0
margin_right = 300.0
margin_bottom = 166.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Vote Editor"

[node name="ServerAddress" type="LineEdit" parent="HFlowContainer"]
margin_top = 186.0
margin_right = 300.0
margin_bottom = 232.0
size_flags_horizontal = 3
text = "server_url"

[node name="ApiPath" type="LineEdit" parent="HFlowContainer"]
margin_top = 252.0
margin_right = 300.0
margin_bottom = 298.0
size_flags_horizontal = 3
text = "server_url"

[node name="PortContainer" type="HSplitContainer" parent="HFlowContainer"]
margin_top = 318.0
margin_right = 300.0
margin_bottom = 364.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ServerPort" type="SpinBox" parent="HFlowContainer/PortContainer"]
margin_right = 122.0
margin_bottom = 46.0
min_value = 1.0
max_value = 65565.0
value = 80.0
rounded = true

[node name="BtConnect" type="Button" parent="HFlowContainer/PortContainer"]
margin_left = 134.0
margin_right = 300.0
margin_bottom = 46.0
text = "Connect"

[node name="ServerLabel" type="Label" parent="HFlowContainer"]
margin_top = 384.0
margin_right = 300.0
margin_bottom = 420.0
size_flags_horizontal = 3
text = "Connecting..."
align = 1

[node name="VersionLabel" type="Label" parent="HFlowContainer"]
margin_top = 440.0
margin_right = 300.0
margin_bottom = 476.0
size_flags_horizontal = 3
text = "Client Version"
align = 1

[node name="PopupError" type="AcceptDialog" parent="."]
margin_top = 106.0
margin_right = 301.0
margin_bottom = 208.0
window_title = "Error!"
dialog_text = "Server offline"

[node name="PopupHostVote" type="PopupPanel" parent="."]
margin_left = 65.0
margin_top = 183.0
margin_right = 927.0
margin_bottom = 322.0
__meta__ = {
"_edit_group_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="PopupHostVote"]
margin_left = 4.0
margin_top = 4.0
margin_right = 858.0
margin_bottom = 135.0

[node name="HBoxContainer" type="HBoxContainer" parent="PopupHostVote/VBoxContainer"]
margin_right = 854.0
margin_bottom = 63.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HostVoteLabel" type="Label" parent="PopupHostVote/VBoxContainer/HBoxContainer"]
margin_right = 700.0
margin_bottom = 63.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Enter vote ID"
align = 1
valign = 1

[node name="HostVoteSubmit" type="Button" parent="PopupHostVote/VBoxContainer/HBoxContainer"]
margin_left = 704.0
margin_right = 854.0
margin_bottom = 63.0
text = "Submit"

[node name="HostVoteEdit" type="LineEdit" parent="PopupHostVote/VBoxContainer"]
margin_top = 67.0
margin_right = 854.0
margin_bottom = 131.0
align = 1
placeholder_text = "Vote id"

[node name="PopupJoinVote" type="PopupPanel" parent="."]
visible = true
margin_left = 14.0
margin_top = 54.0
margin_right = 286.0
margin_bottom = 384.0
__meta__ = {
"_edit_group_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="PopupJoinVote"]
margin_left = 4.0
margin_top = 4.0
margin_right = 268.0
margin_bottom = 326.0

[node name="HBoxContainer" type="HBoxContainer" parent="PopupJoinVote/VBoxContainer"]
visible = false
margin_right = 359.0
margin_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="JoinVoteLabel" type="Label" parent="PopupJoinVote/VBoxContainer/HBoxContainer"]
margin_right = 205.0
margin_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Enter code"
align = 1
valign = 1

[node name="JoinVoteSubmit" type="Button" parent="PopupJoinVote/VBoxContainer/HBoxContainer"]
margin_left = 209.0
margin_right = 359.0
margin_bottom = 60.0
text = "Submit"

[node name="JoinVoteEdit" type="LineEdit" parent="PopupJoinVote/VBoxContainer"]
margin_right = 264.0
margin_bottom = 46.0
align = 1
max_length = 4
placeholder_text = "CODE"

[node name="KeyboardContainer" type="GridContainer" parent="PopupJoinVote/VBoxContainer"]
margin_top = 50.0
margin_right = 264.0
margin_bottom = 322.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 3

[node name="Key0" type="Button" parent="PopupJoinVote/VBoxContainer/KeyboardContainer"]
margin_right = 86.0
margin_bottom = 42.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "0"

[node name="KeyClean" type="Button" parent="PopupJoinVote/VBoxContainer/KeyboardContainer"]
margin_left = 90.0
margin_right = 175.0
margin_bottom = 42.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "CL"

[node name="KeyEnter" type="Button" parent="PopupJoinVote/VBoxContainer/KeyboardContainer"]
margin_left = 179.0
margin_right = 264.0
margin_bottom = 42.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "EN"

[node name="Key1" type="Button" parent="PopupJoinVote/VBoxContainer/KeyboardContainer"]
margin_top = 46.0
margin_right = 86.0
margin_bottom = 88.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "1"

[node name="Key2" type="Button" parent="PopupJoinVote/VBoxContainer/KeyboardContainer"]
margin_left = 90.0
margin_top = 46.0
margin_right = 175.0
margin_bottom = 88.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "2"

[node name="Key3" type="Button" parent="PopupJoinVote/VBoxContainer/KeyboardContainer"]
margin_left = 179.0
margin_top = 46.0
margin_right = 264.0
margin_bottom = 88.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "3"

[node name="Key4" type="Button" parent="PopupJoinVote/VBoxContainer/KeyboardContainer"]
margin_top = 92.0
margin_right = 86.0
margin_bottom = 134.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "4"

[node name="Key5" type="Button" parent="PopupJoinVote/VBoxContainer/KeyboardContainer"]
margin_left = 90.0
margin_top = 92.0
margin_right = 175.0
margin_bottom = 134.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "5"

[node name="Key6" type="Button" parent="PopupJoinVote/VBoxContainer/KeyboardContainer"]
margin_left = 179.0
margin_top = 92.0
margin_right = 264.0
margin_bottom = 134.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "6"

[node name="Key7" type="Button" parent="PopupJoinVote/VBoxContainer/KeyboardContainer"]
margin_top = 138.0
margin_right = 86.0
margin_bottom = 180.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "7"

[node name="Key8" type="Button" parent="PopupJoinVote/VBoxContainer/KeyboardContainer"]
margin_left = 90.0
margin_top = 138.0
margin_right = 175.0
margin_bottom = 180.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "8"

[node name="Key9" type="Button" parent="PopupJoinVote/VBoxContainer/KeyboardContainer"]
margin_left = 179.0
margin_top = 138.0
margin_right = 264.0
margin_bottom = 180.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "9"

[node name="KeyA" type="Button" parent="PopupJoinVote/VBoxContainer/KeyboardContainer"]
margin_top = 184.0
margin_right = 86.0
margin_bottom = 226.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "A"

[node name="KeyB" type="Button" parent="PopupJoinVote/VBoxContainer/KeyboardContainer"]
margin_left = 90.0
margin_top = 184.0
margin_right = 175.0
margin_bottom = 226.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "B"

[node name="KeyC" type="Button" parent="PopupJoinVote/VBoxContainer/KeyboardContainer"]
margin_left = 179.0
margin_top = 184.0
margin_right = 264.0
margin_bottom = 226.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "C"

[node name="KeyD" type="Button" parent="PopupJoinVote/VBoxContainer/KeyboardContainer"]
margin_top = 230.0
margin_right = 86.0
margin_bottom = 272.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "D"

[node name="KeyE" type="Button" parent="PopupJoinVote/VBoxContainer/KeyboardContainer"]
margin_left = 90.0
margin_top = 230.0
margin_right = 175.0
margin_bottom = 272.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "E"

[node name="KeyF" type="Button" parent="PopupJoinVote/VBoxContainer/KeyboardContainer"]
margin_left = 179.0
margin_top = 230.0
margin_right = 264.0
margin_bottom = 272.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "F"

[connection signal="timeout" from="ViewportTimer" to="." method="_on_viewport_size_changed"]
[connection signal="pressed" from="HFlowContainer/BtHostVote" to="." method="_on_BtHostVote_pressed"]
[connection signal="pressed" from="HFlowContainer/BtJoinVote" to="." method="_on_BtJoinVote_pressed"]
[connection signal="pressed" from="HFlowContainer/BtVoteEditor" to="." method="_on_BtVoteEditor_pressed"]
[connection signal="pressed" from="HFlowContainer/PortContainer/BtConnect" to="." method="_on_server_connect"]
[connection signal="pressed" from="PopupHostVote/VBoxContainer/HBoxContainer/HostVoteSubmit" to="." method="_on_HostVoteEdit_text_entered" binds= [ "" ]]
[connection signal="text_entered" from="PopupHostVote/VBoxContainer/HostVoteEdit" to="." method="_on_HostVoteEdit_text_entered"]
[connection signal="pressed" from="PopupJoinVote/VBoxContainer/HBoxContainer/JoinVoteSubmit" to="." method="_on_JoinVoteEdit_text_entered" binds= [ "" ]]
[connection signal="text_changed" from="PopupJoinVote/VBoxContainer/JoinVoteEdit" to="." method="_on_JoinVoteEdit_text_changed"]
[connection signal="text_entered" from="PopupJoinVote/VBoxContainer/JoinVoteEdit" to="." method="_on_JoinVoteEdit_text_entered"]
[connection signal="pressed" from="PopupJoinVote/VBoxContainer/KeyboardContainer/Key0" to="." method="_on_Key_pressed" binds= [ "0" ]]
[connection signal="pressed" from="PopupJoinVote/VBoxContainer/KeyboardContainer/KeyClean" to="." method="_on_KeyClean_pressed"]
[connection signal="pressed" from="PopupJoinVote/VBoxContainer/KeyboardContainer/KeyEnter" to="." method="_on_JoinVoteEdit_text_entered" binds= [ "" ]]
[connection signal="pressed" from="PopupJoinVote/VBoxContainer/KeyboardContainer/Key1" to="." method="_on_Key_pressed" binds= [ "1" ]]
[connection signal="pressed" from="PopupJoinVote/VBoxContainer/KeyboardContainer/Key2" to="." method="_on_Key_pressed" binds= [ "2" ]]
[connection signal="pressed" from="PopupJoinVote/VBoxContainer/KeyboardContainer/Key3" to="." method="_on_Key_pressed" binds= [ "3" ]]
[connection signal="pressed" from="PopupJoinVote/VBoxContainer/KeyboardContainer/Key4" to="." method="_on_Key_pressed" binds= [ "4" ]]
[connection signal="pressed" from="PopupJoinVote/VBoxContainer/KeyboardContainer/Key5" to="." method="_on_Key_pressed" binds= [ "5" ]]
[connection signal="pressed" from="PopupJoinVote/VBoxContainer/KeyboardContainer/Key6" to="." method="_on_Key_pressed" binds= [ "6" ]]
[connection signal="pressed" from="PopupJoinVote/VBoxContainer/KeyboardContainer/Key7" to="." method="_on_Key_pressed" binds= [ "7" ]]
[connection signal="pressed" from="PopupJoinVote/VBoxContainer/KeyboardContainer/Key8" to="." method="_on_Key_pressed" binds= [ "8" ]]
[connection signal="pressed" from="PopupJoinVote/VBoxContainer/KeyboardContainer/Key9" to="." method="_on_Key_pressed" binds= [ "9" ]]
[connection signal="pressed" from="PopupJoinVote/VBoxContainer/KeyboardContainer/KeyA" to="." method="_on_Key_pressed" binds= [ "A" ]]
[connection signal="pressed" from="PopupJoinVote/VBoxContainer/KeyboardContainer/KeyB" to="." method="_on_Key_pressed" binds= [ "B" ]]
[connection signal="pressed" from="PopupJoinVote/VBoxContainer/KeyboardContainer/KeyC" to="." method="_on_Key_pressed" binds= [ "C" ]]
[connection signal="pressed" from="PopupJoinVote/VBoxContainer/KeyboardContainer/KeyD" to="." method="_on_Key_pressed" binds= [ "D" ]]
[connection signal="pressed" from="PopupJoinVote/VBoxContainer/KeyboardContainer/KeyE" to="." method="_on_Key_pressed" binds= [ "E" ]]
[connection signal="pressed" from="PopupJoinVote/VBoxContainer/KeyboardContainer/KeyF" to="." method="_on_Key_pressed" binds= [ "F" ]]
